--- a/css/style.css
+++ b/css/style.css
@@ -42,8 +42,39 @@ body {
 .wrapper {
   min-height: 100%;
 }
-/* ------------ */
+/* header start */
 
+.header {
+}
+
+.header__container {
+}
+
+.header__logo {
+}
+
+.header__menu {
+}
+
+.menu {
+}
+
+.menu__icon {
+}
+
+.menu__body {
+}
+
+.menu__list {
+}
+
+.menu__link {
+}
+
+.menu__sub-list {
+}
+
+/* header end */
 .page {
   padding: 90px 0 30px 0;
 }
